auto-test/tests/chapter_18/invalid_types/extra_credit/union_tag_resolution/conflicting_param_union_types.c
struct s;


int foo(struct s x);

int main(void) {
    union s;  

    
    
    int foo(union s x);
    return 0;
}